fixed alignment

--- a/style.css
+++ b/style.css
@@ -79,15 +79,10 @@ h1 {
     font-size: 20px;
 }
 
-.img {
-    justify-content: center;
-    margin-left: 250px;
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 20px;
-}
-
-.video {
-    justify-content: center;
-    justify-content: center;
-    margin-left: 300px;
-    margin-top: 20px;
+   
 }
